globus-xio-udt-driver (1.19-3+gt6.@distro@) @distro@; urgency=low

  * Rename binary package from libglobus-xio-gridftp-driver1 to
    libglobus-xio-gridftp-driver since it is an unversioned shared object

 -- Globus Toolkit <support@globus.org>  Fri, 04 Dec 2015 08:47:39 -0500

globus-xio-udt-driver (1.19-2+gt6.@distro@) @distro@; urgency=low

  * Dependency changes for libselinux and liblzma for ubuntu wily

 -- Globus Toolkit <support@globus.org>  Thu, 22 Oct 2015 09:56:58 -0400

globus-xio-udt-driver (1.19-1+gt6.@distro@) @distro@; urgency=low

  * ignore other end's attempts at ipv6 negotiation

 -- Globus Toolkit <support@globus.org>  Mon, 21 Sep 2015 14:22:45 -0500

globus-xio-udt-driver (1.18-1+gt6.@distro@) @distro@; urgency=low

  * don't attempt ice negotiation over ipv6 while udt driver does not support ipv6

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jul 2015 13:30:27 -0500

globus-xio-udt-driver (1.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix error checking and automake warning

 -- Globus Toolkit <support@globus.org>  Mon, 15 Jun 2015 21:31:33 -0400

globus-xio-udt-driver (1.16-2+gt6.@distro@) @distro@; urgency=low

  * Add support for debian squeeze and ubuntu lucid

 -- Globus Toolkit <support@globus.org>  Thu, 30 Oct 2014 11:11:41 -0400

globus-xio-udt-driver (1.15-2+gt6.@distro@) @distro@; urgency=low

  * Add dependency on libgupnp-igd-1.0-dev

 -- Globus Toolkit <support@globus.org>  Wed, 29 Oct 2014 13:08:31 -0400

globus-xio-udt-driver (1.15-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-xio-udt-driver (1.14-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-xio-udt-driver (1.14-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400
