@@ -1,3 +1,9 @@
+globus-xio-udt-driver (1.20-1+gt6.@distro@) @distro@; urgency=low
+
+  * Don't configure glib2 during unpack
+
+ -- Globus Toolkit <support@globus.org>  Wed, 27 Apr 2016 17:22:52 -0400
+
 globus-xio-udt-driver (1.19-3+gt6.@distro@) @distro@; urgency=low
 
   * Rename binary package from libglobus-xio-gridftp-driver1 to
